<resources>
    <string name="app_name">Coolist</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Contact</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_change_password">Change Password</string>
    <string name="nav_item_logout">Log Out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_change_password</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_home">FlipBox</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">REGISTER</string>
    <string name="loguot">Logout</string>
    <string name="edit_password">Edit Password</string>
    <string name="profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_password">Change Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit">EditActivity</string>

</resources>
