<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.flipbox.cover.coolist.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/editProfile" android:title="@string/profile"
        android:orderInCategory="100" yourapp:showAsAction="never" />
    <item android:id="@+id/editPassword" android:title="@string/edit_password"
        android:orderInCategory="100" yourapp:showAsAction="never" />
    <item android:id="@+id/logout" android:title="@string/loguot"
        android:orderInCategory="100" yourapp:showAsAction="never" />


</menu>